rest v1 Get userInfo
